Add joda-time-2.3-jar into libs folder Add classpath in ARcowabungaproject-model and ARcowabungaproject tojoda-time-2.3-jar

--- a/ARcowabungaproject-model/.classpath
+++ b/ARcowabungaproject-model/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/run/media/local/ext4/CowabungaAr/ar-cowabunga-project/libs/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
