--- a/ARcowabungaproject/.classpath
+++ b/ARcowabungaproject/.classpath
@@ -11,5 +11,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/ARcowabungaproject-model"/>
+	<classpathentry kind="lib" path="/run/media/local/ext4/CowabungaAr/ar-cowabunga-project/libs/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
