--- a/ARcowabungaproject/.classpath
+++ b/ARcowabungaproject/.classpath
@@ -11,6 +11,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/ARcowabungaproject-model"/>
-	<classpathentry kind="lib" path="../libs/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="../libs/sources/joda-time-2.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:../libs/javadoc/joda-time-2.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
