--- a/TestView/AndroidManifest.xml
+++ b/TestView/AndroidManifest.xml
@@ -15,15 +15,21 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="org.escoladeltreball.arcowabungaproject.activities.MainActivity"
-            android:label="@string/app_name" >
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.escoladeltreball.arcowabungaproject.activities.DishesMenuActivity"></activity>
-        <activity android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity"></activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.DishesMenuActivity"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity" >
+        </activity>
     </application>
 
 </manifest>
