--- a/TestView/AndroidManifest.xml
+++ b/TestView/AndroidManifest.xml
@@ -14,22 +14,29 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.escoladeltreball.arcowabungaproject.activities.MainActivity"
-            android:configChanges="keyboardHidden|orientation"
+            android:name="org.escoladeltreball.arcowabungaproject.activities.SplashScreenActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="org.escoladeltreball.arcowabungaproject.activities.DishesMenuActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation" >
+            android:name="org.escoladeltreball.arcowabungaproject.activities.MainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity" >
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.DishesMenuActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
