--- a/layoutTest/bin/AndroidManifest.xml
+++ b/layoutTest/bin/AndroidManifest.xml
@@ -22,6 +22,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="org.escoladeltreball.layouttest.Tab1"
+            android:label="@string/title_activity_tab1" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.layouttest.Tab2"
+            android:label="@string/title_activity_tab2" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.layouttest.Tab3"
+            android:label="@string/title_activity_tab3" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.layouttest.SecondActivity"
+            android:label="@string/title_activity_second" >
+        </activity>
     </application>
 
 </manifest>
