--- a/layoutTest/AndroidManifest.xml
+++ b/layoutTest/AndroidManifest.xml
@@ -13,14 +13,16 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="org.escoladeltreball.layouttest.MainActivity"
-            android:label="@string/app_name" >
+        <activity android:name="org.escoladeltreball.layouttest.SplashScreenActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.layouttest.MainActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="org.escoladeltreball.layouttest.Tab1"
