Add all views and the views basic structure

--- a/TestView/AndroidManifest.xml
+++ b/TestView/AndroidManifest.xml
@@ -35,6 +35,21 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.LastOrdersActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.OrderActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.ContactActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity"
             android:screenOrientation="landscape" >
         </activity>
