Improve the tabsColor method in TabsMaker.class

--- a/TestView/.project
+++ b/TestView/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestView_ARcowabungaproject</name>
+	<name>ARcowabungaproject_Test</name>
 	<comment></comment>
 	<projects>
 	</projects>
