--- a/layoutTest/AndroidManifest.xml
+++ b/layoutTest/AndroidManifest.xml
@@ -14,12 +14,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="org.escoladeltreball.layouttest.SplashScreenActivity" >
-           
         </activity>
         <activity
             android:name="org.escoladeltreball.layouttest.MainActivity"
             android:label="@string/app_name" >
-             <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -40,6 +39,10 @@
         <activity
             android:name="org.escoladeltreball.layouttest.SecondActivity"
             android:label="@string/title_activity_second" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.layouttest.TabActivity"
+            android:label="@string/title_activity_tab" >
         </activity>
     </application>
 
