--- a/ARcowabungaproject/AndroidManifest.xml
+++ b/ARcowabungaproject/AndroidManifest.xml
@@ -8,19 +8,62 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
 
-    <application
+        <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.escoladeltreball.arcowabungaproject.MainActivity"
-            android:label="@string/app_name" >
+            android:name="org.escoladeltreball.arcowabungaproject.activities.SplashScreenActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.MainMenuActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.DishesMenuActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+<!--         <activity -->
+<!--             android:name="org.escoladeltreball.layouttest.Tab1" -->
+<!--             android:label="@string/title_activity_tab1" > -->
+<!--         </activity> -->
+<!--         <activity -->
+<!--             android:name="org.escoladeltreball.layouttest.Tab2" -->
+<!--             android:label="@string/title_activity_tab2" > -->
+<!--         </activity> -->
+<!--         <activity -->
+<!--             android:name="org.escoladeltreball.layouttest.Tab3" -->
+<!--             android:label="@string/title_activity_tab3" > -->
+<!--         </activity> -->
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.LastOrdersActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.OrderActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.ContactActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
