--- a/layoutTest/.project
+++ b/layoutTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>layoutTest</name>
+	<name>layoutTest_ARcowabungaproject</name>
 	<comment></comment>
 	<projects>
 	</projects>
