--- a/ARcowabungaproject/AndroidManifest.xml
+++ b/ARcowabungaproject/AndroidManifest.xml
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.escoladeltreball.arcowabungaproject.activities.PizzaMenuActivity"
+            android:name="org.escoladeltreball.arcowabungaproject.activities.MenuActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait" >
         </activity>
