--- a/ARcowabungaproject-model/.classpath
+++ b/ARcowabungaproject-model/.classpath
@@ -7,7 +7,7 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="../libs/sources/joda-time-2.3-sources.jar">
+	<classpathentry exported="true" kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="/libs/sources/joda-time-2.3-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:../libs/javadoc/joda-time-2.3-javadoc.jar!/"/>
 		</attributes>
