--- a/ARcowabungaproject/.classpath
+++ b/ARcowabungaproject/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path=".apt_generated">
@@ -10,8 +10,8 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/ARcowabungaproject-model"/>
-	<classpathentry kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="../libs/sources/joda-time-2.3-sources.jar">
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ARcowabungaproject-model"/>
+	<classpathentry exported="true" kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="/libs/sources/joda-time-2.3-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:../libs/javadoc/joda-time-2.3-javadoc.jar!/"/>
 		</attributes>
