Add external required libraries

--- a/ARcowabungaproject/project.properties
+++ b/ARcowabungaproject/project.properties
@@ -12,3 +12,6 @@
 
 # Project target.
 target=android-15
+android.library.reference.3=../../droidar/ModelLoaderAdapters
+android.library.reference.1=../../droidar/ARMarker
+android.library.reference.2=../../droidar/droidar
