--- a/ARcowabungaproject/AndroidManifest.xml
+++ b/ARcowabungaproject/AndroidManifest.xml
@@ -7,6 +7,25 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
+    
+	<!-- IMPORTANT: The following permissions should also be added to each project 
+		which uses the DroidAR Library -->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.CAMERA" />
+<!-- 	<uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" /> -->
+<!-- 	<uses-permission android:name="android.permission.READ_FRAME_BUFFER" /> -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />
+
+	<!-- This should be added to to allow the fullscreen mode to big screen 
+		devices like the samsung galaxy tab -->
+<!-- 	<supports-screens android:smallScreens="true" -->
+<!-- 		android:normalScreens="true" android:largeScreens="true" -->
+<!-- 		android:anyDensity="true" /> -->
  
     <application
         android:allowBackup="true"
@@ -54,6 +73,31 @@
             android:name="org.escoladeltreball.arcowabungaproject.activities.ARViewActivity"
             android:screenOrientation="landscape" >
         </activity>
-    </application>
+        <activity android:label="@string/app_name"
+			android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation"
+			android:name="system.ArActivity">
+		</activity>
 
+        <!-- Custom List is used to easily display lists of any type of object -->
+		<activity android:name="gui.CustomListActivity"></activity>
+
+		<!-- the error handler will be automatically displayed when an error appears -->
+		<activity android:name="system.ErrorHandler" android:process=":myexeptionprocess"
+			android:taskAffinity="system.ErrorHandler">
+			<intent-filter>
+				<category android:name="android.intent.category.DEFAULT" />
+				<action android:name="android.intent.action.VIEW" />
+				<data android:mimeType="errors/myUnhandleCatcher" />
+			</intent-filter>
+		</activity>
+
+		<!-- is needed to display information on application startup -->
+		<activity android:theme="@android:style/Theme.Dialog"
+			android:name="gui.InfoScreen"></activity>
+
+		<!-- an activity to easily display any kind of ui -->
+		<activity android:theme="@android:style/Theme.Translucent"
+			android:name="gui.simpleUI.SimpleUI"></activity>	
+    </application>
+    
 </manifest>
