--- a/ARcowabungaproject/project.properties
+++ b/ARcowabungaproject/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=../../../project/desplieguear/ARMarker
-android.library.reference.2=../../../project/desplieguear/droidar
-android.library.reference.3=../../../project/desplieguear/ModelLoaderAdapters
+android.library.reference.1=../../desplieguear/ARMarker
+android.library.reference.2=../../desplieguear/droidar
+android.library.reference.3=../../desplieguear/ModelLoaderAdapters
