Add postgres driver in server

--- a/ARcowabungaproject-server/.classpath
+++ b/ARcowabungaproject-server/.classpath
@@ -8,10 +8,11 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="../libs/sources/joda-time-2.3-sources.jar">
+	<classpathentry kind="lib" path="../libs/joda-time-2.3.jar" sourcepath="/libs/sources/joda-time-2.3-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:../libs/javadoc/joda-time-2.3-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/xims/Baixades/postgresql-9.2-1004.jdbc41.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
